Updated readme and yaml
